<resources>
    <string name="app_name">DAM_DiegoVega</string>
    <string name="Apellidos_Nombres">Apellidos y Nombre</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Contraseña">Clave</string>
    <string name="Apellidos_Nombres2" />
    <string name="Correo2" />
    <string name="Contraseña2" />
    <string name="Fecha">Fecha de Nacimiento</string>
    <string name="Fecha2">Fecha de Nacimiento2</string>
    <string name="carrera">Carrera</string>
    <string name="sistemas">Ingeniera de sistemas</string>
    <string name="ambiental">Ingenieria Ambiental</string>
    <string name="mecanica">Ingenira Mecanica</string>
    <string name="admin" />
    <string name="admi">Aministracion</string>
    <string name="convocatoria">¿Por qué medio se enteró de la convocatoria?</string>
    <string name="envio">Enviar</string>
    <string name="Apellidos_nombre">apellidos y nombres</string>
    <string name="Apellido">Nombre</string>
    <string name="fecha3" />
    <string name="correo3" />
    <string name="radio">Radio</string>
    <string name="internet">Internet</string>
    <string name="amigo">Amigo</string>
    <string name="publicidad">Publicidad</string>
</resources>